--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install        :
 
 script:
         - docker run test/docker-react npm run test -- --coverage
+
+deploy:
+        provider: elasticbeanstalk
+        region: "eu-west-1"
+        app: "docker"
+        bucket_name: "elasticbeanstalk-eu-west-1-679648168831"
+        bucket_path: "docker"
+        on:
+         branch: master
+        access_key_id: $AWS_ACCESS_KEY
+        secret_access_key:
+         secure: "$AWS_SECRET_KEY"        
